AUTOMAKE_OPTIONS = foreign

SUBDIRS = Src Inc

DIST_SUBDIRS = Src Docs Inc

EXTRA_DIST = \
   build.bat \
   build_linux.sh \
   methods.vbs \
   preparebuilds.wsf \
   Managed/Project/MgWmsOverrides.vcproj \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/AssemblyInfo.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvClassCollection.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvFormatType.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvLayerDefinition.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvRasterDefinition.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/Namespace.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/AssemblyVersion.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvClassCollection.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvLayerCollection.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvPhysicalSchemaMapping.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvStyleDefinition.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/resource.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgObjectFactory.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvClassDefinition.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvLayerCollection.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvPhysicalSchemaMapping.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvStyleDefinition.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/stdafx.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgObjectFactory.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvClassDefinition.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvLayerDefinition.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvRasterDefinition.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/MgWmsOverrides.rc \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/stdafx.h
