##
## Copyright (C) 2004-2006  Autodesk, Inc.
## 
## This library is free software; you can redistribute it and/or
## modify it under the terms of version 2.1 of the GNU Lesser
## General Public License as published by the Free Software Foundation.
## 
## This library is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## Lesser General Public License for more details.
## 
## You should have received a copy of the GNU Lesser General Public
## License along with this library; if not, write to the Free Software
## Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
##

AUTOMAKE_OPTIONS = foreign

SUBDIRS = Src Inc

DIST_SUBDIRS = Src Docs Inc

EXTRA_DIST = \
   build.bat \
   build_linux.sh \
   methods.vbs \
   preparebuilds.wsf \
   Managed/Project/MgWmsOverrides.vcproj \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/AssemblyInfo.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvClassCollection.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvFormatType.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvLayerDefinition.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvRasterDefinition.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/Namespace.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/AssemblyVersion.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvClassCollection.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvLayerCollection.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvPhysicalSchemaMapping.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvStyleDefinition.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/resource.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgObjectFactory.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvClassDefinition.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvLayerCollection.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvPhysicalSchemaMapping.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvStyleDefinition.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/stdafx.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgObjectFactory.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvClassDefinition.h \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvLayerDefinition.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/mgOvRasterDefinition.cpp \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/MgWmsOverrides.rc \
   Managed/Src/OSGeo/FDO/Providers/WMS/Override/stdafx.h
