#------------------configure.in----------------------------------------
dnl Configure.in for OSGeo FDO WMS Provider
#----------------------------------------------------------------------
# Variables
# Following are the makefile directories 
#----------------------------------------------------------------------
AC_INIT(FDO,3.2,https://fdowms.osgeo.org)
AC_CONFIG_SRCDIR(configure.in)
AM_INIT_AUTOMAKE

AC_PREFIX_DEFAULT(/usr/local/fdo-3.2.0)

AC_LANG_C
AC_PROG_CC
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_YACC
AC_DISABLE_STATIC
AM_PROG_LIBTOOL

AC_SUBST(VERSION, "3.2.0")

# Check for Debug or Release build settings
AC_ARG_ENABLE([debug],
               MAP_HELP_STRING([--enable-debug],
              	             [enable debug build [[default=no]]]),
	      	             [enable_debug=$enableval],
	      	             [enable_debug=no])

if test $enable_debug = yes; then
 AC_MSG_NOTICE([Using debug configuration])
 CXXFLAGS="-g -MMD -MT "
 AC_SUBST(CXXFLAGS, ["-g -MMD -MT "])
 CXXFLAGS_SDF="-g "
 AC_SUBST(CXXFLAGS_SDF, ["-g "])
else
 AC_MSG_NOTICE([Using optimized configuration])
 CXXFLAGS="-MMD -MT "
 AC_SUBST(CXXFLAGS, ["-MMD -MT "])
 CXXFLAGS_SDF=""
 AC_SUBST(CXXFLAGS_SDF, [""])
fi

##output Makefiles##
AC_CONFIG_FILES(Makefile)

#############################################
## Providers
#############################################

#WMS
AC_CONFIG_FILES([Src/Makefile \
                 Inc/Makefile \
                 Src/Message/Makefile \
                 Src/Overrides/Makefile \
                 Src/Provider/Makefile])

AC_OUTPUT

